--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -1,11 +1,11 @@
 {
-    "suggest.autoTrigger": "none",
-    "suggest.timeout": 1,
+    "_suggest.autoTrigger": "none",
+    "_suggest.timeout": 1,
     "coc.source.OmniSharp.enable" : true,
     "coc.source.OmniSharp.triggerCharacters": ".",
     "coc.preferences.formatOnSaveFiletypes": [
-        "javascript__",
-        "javascriptreact__",
+        "javascript",
+        "javascriptreact",
         "typescript",
         "typescriptreact",
         "rust",
