--- a/config/i3/i3blocks.conf
+++ b/config/i3/i3blocks.conf
@@ -110,7 +110,7 @@ interval=30
 # Weather
 #
 [weather]
-command=curl -Ss 'https://wttr.in?0&T&Q' | cut -c 16- | head -2 | xargs echo
+command=curl -Ss 'https://wttr.in/59.20,10.94?0&T&Q' | cut -c 16- | head -2 | xargs echo
 interval=1800
 color=#A4C2F4
 
