--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,8 +21,15 @@ bind -r l select-pane -R
 
 set -s escape-time 0
 
+# Fix nvim complaints
+set-option -g focus-events on
+set-option -g default-terminal "tmux-256color"
+set-option -sa terminal-overrides ',alacritty:RGB'
+
+# Remove clock
+set -g status-right '#H'
+
 # Automatically rename window to current directory
 set-option -g status-interval 5
 set-option -g automatic-rename on
 set-option -g automatic-rename-format '#{b:pane_current_path}'
-
