--- a/config/i3/config
+++ b/config/i3/config
@@ -41,7 +41,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -236,22 +236,24 @@ bindsym Print exec flameshot gui
 #exec "~/.config/i3/launch_polybar.sh"
 
 # Gaps
-gaps inner 5
-gaps outer 5
+gaps inner 10
+gaps outer 10
 
 #border_radius 10
 
 # Picom
-exec --no-startup-id picom --experimental-backends --backend glx --xrender-sync-fence
+#exec --no-startup-id picom --experimental-backends --backend glx --xrender-sync-fence
+exec --no-startup-id picom -CGb
 
 # Wallpaper
-exec_always --no-startup-id feh --bg-scale ~/Documents/Wallpapers/wp9892209-kde-plasma-wallpapers.png
-
-
+exec_always --no-startup-id feh --bg-scale ~/Documents/Wallpapers/forest-fox-wallpaper.jpg
 
 # Mouse sensitivity
 exec_always xinput set-prop 8 303 0, 1
 exec_always xinput set-prop 8 300 -0.330882
+
+# Key repeat
+exec_always xset r rate 250 25
 
 # Force android emulator into floating mode
 for_window [title="^Android Emulator*"] floating enable
