--- a/config/i3/i3blocks.conf
+++ b/config/i3/i3blocks.conf
@@ -28,6 +28,15 @@ command=/usr/share/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
+# Generic media player support
+#
+# This displays "ARTIST - SONG" if a music is playing.
+# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
+#[mediaplayer]
+#instance=spotify
+#interval=5
+#signal=10
+
 # Volume indicator
 #
 # The first parameter sets the step (and units to display)
@@ -47,7 +56,7 @@ command=/usr/share/i3blocks/volume 5 pulse
 # The type defaults to "mem" if the instance is not specified.
 [memory]
 label=MEM
-separator=false
+separator=true
 interval=30
 
 #[memory]
@@ -89,11 +98,17 @@ interval=30
 #
 # The script may be called with -w and -c switches to specify thresholds,
 # see the script for details.
-#[cpu_usage]
-#label=CPU
-#interval=10
-#min_width=CPU: 100.00%
-#separator=false
+[cpu_usage]
+label=CPU
+interval=1
+min_width=CPU: 99.99%
+separator=true
+
+[gpu_usage]
+command=~/.config/i3/gputemp.sh
+interval=1
+min_width=GPU 10% @ 10°C
+separator=true
 
 #[load_average]
 #interval=10
@@ -117,23 +132,16 @@ color=#A4C2F4
 # Date Time
 #
 [time]
-command=date '+%d-%m-%Y %H:%M:%S'
+#command=date '+%a %d-%m-%Y %H:%M:%S'
+command=date '+%a %d-%m-%Y'
 interval=1
 
-# Generic media player support
+# VPN support
 #
-# This displays "ARTIST - SONG" if a music is playing.
-# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
-[mediaplayer]
-instance=rhythmbox
-interval=5
-signal=10
-
-# OpenVPN support
-#
-# Support multiple VPN, with colors.
-#[openvpn]
-#interval=20
+# Uses hotspotshield.
+[vpn_status]
+command=~/.config/i3/vpnstatus.sh
+interval=20
 
 # Temperature
 #
