Redid the entire thing

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -32,10 +32,10 @@ markup=none
 #
 # This displays "ARTIST - SONG" if a music is playing.
 # Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
-#[mediaplayer]
-#instance=spotify
-#interval=5
-#signal=10
+[mediaplayer]
+instance=spotify
+interval=5
+signal=10
 
 # Volume indicator
 #
@@ -125,7 +125,7 @@ separator=true
 # Weather
 #
 [weather]
-command=curl -Ss 'https://wttr.in/59.20,10.94?0&T&Q' | cut -c 16- | head -2 | xargs echo
+command=curl -Ss 'https://wttr.in/59.2115,10.938?0&T&Q' | cut -c 16- | head -2 | xargs echo
 interval=1800
 color=#A4C2F4
 
