--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -14,5 +14,6 @@
     "tsserver.formatOnType": false,
     "diagnostic.errorSign": "!!",
     "diagnostic.warningSign": "•",
-    "diagnostic.infoSign": "•"
+    "diagnostic.infoSign": "•",
+    "svelte.enable-ts-plugin": true
 }
