--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -125,7 +125,8 @@ separator=true
 # Weather
 #
 [weather]
-command=curl -Ss 'https://wttr.in/59.2115,10.938?0&T&Q' | cut -c 16- | head -2 | xargs echo
+#command=curl -Ss 'https://wttr.in/59.2115,10.938?0&T&Q' | cut -c 16- | head -2 | xargs echo
+command=curl -Ss 'wttr.in/Fredrikstad?format=%c%t'
 interval=1800
 color=#A4C2F4
 
