--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -236,8 +236,8 @@ bindsym Print exec flameshot gui
 #exec "~/.config/i3/launch_polybar.sh"
 
 # Gaps
-gaps inner 10
-gaps outer 10
+#gaps inner 10
+#gaps outer 10
 
 #border_radius 10
 
