Removed VPN from bar

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -140,9 +140,9 @@ interval=1
 # VPN support
 #
 # Uses hotspotshield.
-[vpn_status]
-command=~/.config/i3/vpnstatus.sh
-interval=20
+#[vpn_status]
+#command=~/.config/i3/vpnstatus.sh
+#interval=20
 
 # Temperature
 #
