--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,6 +19,8 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
+bind-key -r i run-shell "tmux neww ~/.dotfiles/cht.sh"
+
 set -s escape-time 0
 
 # Fix nvim complaints
