--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -191,8 +191,8 @@ client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color      
 
 #hide_edge_borders both
 
-default_floating_border normal
-default_border pixel 1
+default_floating_border none
+default_border none
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -211,7 +211,7 @@ bar {
 
     #position top
 
-    #font pango: DejaVu Sans Mono 11
+    #font pango: DejaVu Sans Mono 10
 }
 
 
@@ -236,8 +236,8 @@ bindsym Print exec flameshot gui
 #exec "~/.config/i3/launch_polybar.sh"
 
 # Gaps
-#gaps inner 10
-#gaps outer 10
+gaps inner 20
+gaps outer 20
 
 #border_radius 10
 
