--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -5,5 +5,11 @@ active-opacity: 1.00
 frame-opacity: 1.00
 
 fading = true
-fade-delta = 1.0
+fade-delta = 2
 
+
+corner-radius = 10.0
+rounded-corners-exclude = [
+  "window_type = 'dock'",
+  "window_type = 'desktop'"
+];
