--- a/alacritty/.alacritty.yml
+++ b/alacritty/.alacritty.yml
@@ -32,6 +32,5 @@ font:
   size: 10.0
 
 colors.transparent_background_colors: true
-#window.opacity: 0.2
-background_opacity: 1.0
+window.opacity: 0.2
 
