Reduced window radius and also fixed mouse acceleration

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -210,7 +210,6 @@ bar {
     }
 
     #position top
-
     font pango: DejaVu Sans Mono 10
 }
 
@@ -247,8 +246,8 @@ exec_always --no-startup-id picom -CGb
 exec_always --no-startup-id feh --bg-scale ~/Documents/Wallpapers/2201021.png
 
 # Mouse sensitivity
-exec_always xinput set-prop 8 303 0, 1
-exec_always xinput set-prop 8 300 -0.330882
+exec_always xinput --set-prop 8 'libinput Accel Profile Enabled' 0, 1
+#exec_always xinput set-prop 8 300 -0.330882
 
 # Key repeat
 exec_always xset r rate 175 25
