--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -13,3 +13,23 @@ rounded-corners-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'"
 ];
+
+shadow = true;
+shadow-opacity = .5;
+shadow-radius = 7;
+shadow-offset-x = 0;
+shadow-offset-y = 0;
+shadow-exclude = [
+  "name = 'Notification'",
+  "class_g = 'Conky'",
+  "class_g ?= 'Notify-osd'",
+  "class_g = 'Cairo-clock'",
+  "_GTK_FRAME_EXTENTS@:c"
+];
+
+blur-background = true;
+blur: {
+  method = "gaussian";
+  size = 7;
+  deviation = 5.0;
+}
