--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -14,7 +14,7 @@ rounded-corners-exclude = [
   "window_type = 'desktop'"
 ];
 
-shadow = true;
+shadow = false;
 shadow-opacity = .5;
 shadow-radius = 7;
 shadow-offset-x = 0;
