--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -133,8 +133,8 @@ color=#A4C2F4
 # Date Time
 #
 [time]
-#command=date '+%a %d-%m-%Y %H:%M:%S'
-command=date '+%a %d-%m-%Y'
+command=date '+%a %d-%m-%Y %H:%M:%S'
+#command=date '+%a %d-%m-%Y'
 interval=1
 
 # VPN support
