Added mediaplayer script

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -33,7 +33,7 @@ markup=none
 # This displays "ARTIST - SONG" if a music is playing.
 # Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
 [mediaplayer]
-instance=spotify
+command=/home/oliver/.config/i3/mediaplayer
 interval=5
 signal=10
 
